# MQTT-Short-Connect

./: README.md
DTLS/: CMakeLists.txt  Makefile  README.md  mqtt_client.cpp  mqtt_server.cpp
DTLS/Classes/: Connect_Ack.h  Short_Ack.cpp  Short_Ack.h  Short_Connect.h
QUIC/: CMakeLists.txt  README.md  mqtt_client.cpp  mqtt_server.cpp
QUIC/Classes/: Connect_Packet.h  Subscribe_Ack.cpp  Subscribe_Request.cpp
QUIC/captures/: mqtt_quic_ses_est.pcapng  mqtt_quic_ses_res.pcapng  mqtt_short_connect_quic_ses_est.pcapng  mqtt_short_connect_quic_ses_res.pcapng
TCP/: .gitlab-ci.yml  CMakeLists.txt  README.md  config.env  mqtt_client.cpp  mqtt_server.cpp
TCP/Classes/: Connect_Ack.cpp  Connect_Packet.cpp
TCP/captures/: mqtt_short_con_tcp_tfo.pcapng  mqtt_tcp_tfo.pcapng
TLS/: CMakeLists.txt  README.md  mqtt_client.cpp  mqtt_server.cpp
TLS/Classes/: Packet.cpp  Packet.h  Short_Connect.cpp  Subscribe_Ack.h  Subscribe_Request.h
TLS/captures/TLS_12/: mqtt_short_con_tls12_ses_est.pcapng  mqtt_short_con_tls12_ses_res.pcapng  mqtt_tls12_ses_est.pcapng  mqtt_tls12_ses_res.pcapng
TLS/captures/TLS_13/: mqtt_short_con_tls13_ses_est.pcapng  mqtt_short_con_tls13_ses_res.pcapng  mqtt_tls13_ses_est.pcapng  mqtt_tls13_ses_res.pcapng
TLS/captures/TLS_13_TFO/: mqtt_short_connect_tls13_tfo_ses_est_and_res.pcapng  mqtt_short_connect_tls13_tfo_ses_est_and_res_dec.pcapng  mqtt_tls13_tfo_ses_est_and_res_dec.pcapng
